Added '/admin/manage-user.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/manage-account.html
+++ b/BeginnersPad v2/manage-account.html
@@ -44,7 +44,7 @@
                             <div class="text">
                                 <h3 class="name">Name</h3>
                                 <h4 class="username">username</h4>
-                                <p class="account">User type: <span>beginner</span></p>
+                                <p class="account">User type: <span>type</span></p>
                                 <p class="time">Registered on: <span>01-01-2021</span></p>
                             </div>
                         </div>
