--- a/BeginnersPad v2/admin/manage-users.html
+++ b/BeginnersPad v2/admin/manage-users.html
@@ -157,7 +157,7 @@
             <div class="cards">
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -173,7 +173,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -189,7 +189,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -205,7 +205,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -221,7 +221,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -237,7 +237,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -253,7 +253,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
