--- a/BeginnersPad v2/manage-account.html
+++ b/BeginnersPad v2/manage-account.html
@@ -32,6 +32,9 @@
         </ul>
     </nav>
 
+    <!-- Filler -->
+    <div id="pageFiller"></div>
+
     <!-- Showcase -->
     <section class="showcase-avatar">
         <div class="showcase-overlay warning">
@@ -51,7 +54,7 @@
                     </div>
                 </div>
                 <div class="action-buttons">
-                    <i class="fas fa-edit fa-2x"></i>
+                    <i class="fas fa-edit fa-2x" id="modalTrigger"></i>
                 </div>
             </div>
         </div>
@@ -198,10 +201,10 @@
         </div>
     </section>
 
-    <div class="modal modal-small open">
+    <div class="modal" id="modal">
         <div class="modal-header">
-            <h3>Title</h3>
-            <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
+            <h2>Title</h2>
+            <button id="modalHeaderClose" class="btn-link btn-close"><i class="fas fa-times"></i></button>
         </div>
         <div class="modal-content">
             <div class="category">
