--- a/BeginnersPad v2/admin/manage-listing-unit.html
+++ b/BeginnersPad v2/admin/manage-listing-unit.html
@@ -23,7 +23,7 @@
             </div>
             <div class="badge">
                 <span class="badge-mark">4</span>
-                <li><a href="#"><i class="fas fa-user-circle"></i> Account</a></li>
+                <li><a href="/manage-account.html"><i class="fas fa-user-circle"></i> Account</a></li>
             </div>
             <div class="badge" id="navDrawerOpen">
                 <span class="badge-mark">12</span>
