--- a/BeginnersPad v2/beginner/waiting-list.html
+++ b/BeginnersPad v2/beginner/waiting-list.html
@@ -24,7 +24,7 @@
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="#"><i class="fas fa-user-circle"></i> Account</a></li>
+                <li><a href="/manage-account.html"><i class="fas fa-user-circle"></i> Account</a></li>
             </div>
             <div class="badge" id="navDrawerOpen">
                 <span class="badge-mark"></span>
