--- a/BeginnersPad v2/admin/manage-users.html
+++ b/BeginnersPad v2/admin/manage-users.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="fab-container">
-        <button class="fab btn-primary"><i class="fas fa-plus"></i> Add user</button>
+        <button  id="modalTrigger" class="fab btn-primary"><i class="fas fa-plus"></i> Add user</button>
     </div>
 
     <!-- Search bar -->
@@ -270,6 +270,57 @@
             </div>
         </div>
     </section>
+
+    <div class="modal" id="modal">
+        <div class="modal-header">
+            <h2>Add user</h2>
+            <button id="modalHeaderClose" class="btn-link btn-close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-content">
+            <div class="category">
+                <form id="formUpdateAccount">
+                    <div class="form-group">
+                        <div class="grp-name">
+                            <label for="fname">First name</label>
+                            <input type="text" name="fname" id="fname">
+                        </div>
+                        <div class="grp-name">
+                            <label for="lname">Last name</label>
+                            <input type="text" name="lname" id="lname">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Email address*</label>
+                        <input type="email" name="Email address" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="telephone">Phone number (+254xxxxxxxxx)</label>
+                        <input type="text" name="telephone" id="telephone">
+                    </div>
+                    <div class="form-group">
+                        <label for="username">Username (must be unique)</label>
+                        <input type="text" name="username" id="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="user_type">Account type</label>
+                        <select name="user_type" id="user_type">
+                            <option value="" selected>--select account type--</option>
+                            <option value="5">Customer</option>
+                            <option value="4">Property lister</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">New password</label>
+                        <input type="password" name="password" id="password_new">
+                    </div>
+                    <input class="btn btn-submit" type="button" value="Create">
+                </form>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="modalFooterClose" class="btn btn-link">Close</button>
+        </div>
+    </div>
     
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/search-bar-scroll.js"></script>
