--- a/BeginnersPad v2/admin/manage-users.html
+++ b/BeginnersPad v2/admin/manage-users.html
@@ -279,7 +279,7 @@
         <div class="modal-content">
             <div class="category">
                 <form id="formUpdateAccount">
-                    <div class="form-group">
+                    <div class="form-group" id="grpNames">
                         <div class="grp-name">
                             <label for="fname">First name</label>
                             <input type="text" name="fname" id="fname">
@@ -289,19 +289,19 @@
                             <input type="text" name="lname" id="lname">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpEmail">
                         <label for="name">Email address*</label>
                         <input type="email" name="Email address" id="email">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpPhone">
                         <label for="telephone">Phone number (+254xxxxxxxxx)</label>
                         <input type="text" name="telephone" id="telephone">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpUname">
                         <label for="username">Username (must be unique)</label>
                         <input type="text" name="username" id="username">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpAccount">
                         <label for="user_type">Account type</label>
                         <select name="user_type" id="user_type">
                             <option value="" selected>--select account type--</option>
@@ -309,11 +309,11 @@
                             <option value="4">Property lister</option>
                         </select>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpPass">
                         <label for="password">New password</label>
-                        <input type="password" name="password" id="password_new">
+                        <input type="password" name="password" id="password">
                     </div>
-                    <input class="btn btn-submit" type="button" value="Create">
+                    <input class="btn btn-submit" type="button" value="Create" onclick="init();">
                 </form>
             </div>
         </div>
@@ -322,8 +322,10 @@
         </div>
     </div>
     
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="/js/css-base.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/search-bar-scroll.js"></script>
-    <script src="/js/css-base.js"></script>
+    <script src="/js/form-validator.js"></script>
 </body>
 </html>
