Made enhancements to logic in '/js/form-validator.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/manage-account.html
+++ b/BeginnersPad v2/manage-account.html
@@ -216,7 +216,7 @@
             <div class="category">
                 <h3>Account details</h3>
                 <form id="formUpdateAccount">
-                    <div class="form-group">
+                    <div class="form-group" id="grpNames">
                         <div class="grp-name">
                             <label for="fname">First name</label>
                             <input type="text" name="fname" id="fname">
@@ -226,37 +226,37 @@
                             <input type="text" name="lname" id="lname">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpEmail">
                         <label for="name">Email address*</label>
                         <input type="email" name="Email address" id="email">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpPhone">
                         <label for="telephone">Phone number (+254xxxxxxxxx)</label>
                         <input type="text" name="telephone" id="telephone">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpUname">
                         <label for="username">Username (must be unique)</label>
                         <input type="text" name="username" id="username">
                     </div>
-                    <input class="btn btn-submit" type="button" value="Update">
+                    <input class="btn btn-submit" type="button" value="Update" onclick="init();">
                 </form>
             </div>
             <div class="category">
                 <h3>Password</h3>
                 <form action="">
-                    <div class="form-group">
+                    <div class="form-group" id="grpOldPass">
                         <label for="password">Old password</label>
                         <input type="password" name="password_old" id="password_old">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpNewPass">
                         <label for="password">New password</label>
-                        <input type="password" name="password" id="password_new">
+                        <input type="password" name="password_new" id="password_new">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="grpConfPass">
                         <label for="password_confirmation">Confirm new password</label>
                         <input type="password" name="password_confirmation" id="password_confirmation">
                     </div>
-                    <input class="btn btn-submit" type="button" value="Update password">
+                    <input class="btn btn-submit" type="button" value="Update password" onclick="init();">
                 </form>
             </div>
         </div>
@@ -265,6 +265,7 @@
         </div>
     </div>
 
+    <script src="/js/form-validator.js"></script>
     <script src="js/css-base.js"></script>
 </body>
 </html>
