--- a/BeginnersPad v2/admin/dashboard.html
+++ b/BeginnersPad v2/admin/dashboard.html
@@ -145,9 +145,9 @@
                                 <li>Phone number: <span class="name">0700000000</span></li>
                             </ul>
                             <div>
-                                <a class="edit" href="#">Edit basic info <i class="fas fa-chevron-right"></i></a>
+                                <a class="edit" href="/manage-account.html">Edit basic info <i class="fas fa-chevron-right"></i></a>
                             </div>
-                            <button class="btn-link share">Share your profile <i class="fas fa-share-alt"></i></button>
+                            <button class="btn-link share" id="modalTrigger">Share your profile <i class="fas fa-share-alt"></i></button>
                         </div>
                     </div>
             </div>
@@ -533,6 +533,44 @@
             </div>
         </div>
     </section>
+
+    <div class="modal" id="modal">
+        <div class="modal-header">
+            <h2>Share profile</h2>
+            <button id="modalHeaderClose" class="btn-link btn-close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-content">
+            <div class="category">
+                <div class="share-panel">
+                    <div class="item facebook">
+                        <i class="fab fa-facebook fa-2x"></i>
+                        <p>Facebook</p>
+                    </div>
+                    <div class="item messenger">
+                        <i class="fab fa-facebook-messenger fa-2x"></i>
+                        <p>Messenger</p>
+                    </div>
+                    <div class="item twitter">
+                        <i class="fab fa-twitter fa-2x"></i>
+                        <p>Twitter</p>
+                    </div>
+                    <div class="item">
+                        <i class="fas fa-envelope fa-2x"></i>
+                        <p>Email</p>
+                    </div>
+                </div>
+                <form>
+                    <div class="form-group" id="grpLink">
+                        <label for="link">Link</label>
+                        <input type="text" name="link" id="link" placeholder="beginnerspad.com/user/username">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="modalFooterClose" class="btn btn-link">Close</button>
+        </div>
+    </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
     <script src="/js/charts-admin-dashboard.js"></script>
