Changed all references of '/admin/view-user.html' to '/admin/manage-user.html' in'/admin/view-users.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-users.html
+++ b/BeginnersPad v2/admin/view-users.html
@@ -129,7 +129,7 @@
             <div class="cards">
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -161,7 +161,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -193,7 +193,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -209,7 +209,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
@@ -225,7 +225,7 @@
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <a href="/admin/view-user.html">
+                        <a href="/admin/manage-user.html">
                             <h4 class="title">User profile</h4>
                             <div class="details">
                                 <img src="/images/avatar.png" alt="">
