--- a/BeginnersPad v2/admin/manage-zones.html
+++ b/BeginnersPad v2/admin/manage-zones.html
@@ -283,6 +283,7 @@
     <script src="/js/maps-view-listing.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/search-bar-scroll.js"></script>
+    <script src="/js/form-validator-manage-zones.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
 </html>
