--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -254,9 +254,9 @@
                         <label for="name">Sub-zone name*</label>
                         <input type="text" name="name" id="name">
                     </div>
-                    <div class="form-group" id="grpCountry">
-                        <label for="country">Role/nature of sub-zone*</label>
-                        <select name="country" id="country">
+                    <div class="form-group" id="grpRole">
+                        <label for="role">Role/nature of sub-zone*</label>
+                        <select name="role" id="role">
                             <option value="" selected>--select role--</option>
                             <option value="1">Residential</option>
                             <option value="2">Commercial</option>
