--- a/BeginnersPad v2/admin/manage-topics.html
+++ b/BeginnersPad v2/admin/manage-topics.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="fab-container">
-        <button class="fab btn-primary"><i class="fas fa-plus"></i> Add topic</button>
+        <button class="fab btn-primary" onclick="window.location = 'add-topic.html';"><i class="fas fa-plus"></i> Add topic</button>
     </div>
 
     <h3 class="section-title">Manage topics</h3>
