--- a/BeginnersPad v2/admin/manage-users.html
+++ b/BeginnersPad v2/admin/manage-users.html
@@ -290,7 +290,7 @@
                         </div>
                     </div>
                     <div class="form-group" id="grpEmail">
-                        <label for="name">Email address*</label>
+                        <label for="email">Email address*</label>
                         <input type="email" name="Email address" id="email">
                     </div>
                     <div class="form-group" id="grpPhone">
