--- a/BeginnersPad v2/admin/view-tickets.html
+++ b/BeginnersPad v2/admin/view-tickets.html
@@ -138,7 +138,7 @@
                         <th>Assigned to</th>
                         <th>Timestamp</th>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -148,7 +148,7 @@
                         <td>Admin name</td>
                         <td>01-01-2021 00:00:00</td>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -158,7 +158,7 @@
                         <td>Admin name</td>
                         <td>01-01-2021 00:00:00</td>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -168,7 +168,7 @@
                         <td>Admin name</td>
                         <td>01-01-2021 00:00:00</td>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -178,7 +178,7 @@
                         <td>Admin name</td>
                         <td>01-01-2021 00:00:00</td>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -188,7 +188,7 @@
                         <td>Admin name</td>
                         <td>01-01-2021 00:00:00</td>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -198,7 +198,7 @@
                         <td>Admin name</td>
                         <td>01-01-2021 00:00:00</td>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -208,7 +208,7 @@
                         <td>Admin name</td>
                         <td>01-01-2021 00:00:00</td>
                     </tr>
-                    <tr>
+                    <tr class="data">
                         <td>0</td>
                         <td>user@domain.com</td>
                         <td>true/false</td>
@@ -222,7 +222,71 @@
             </div>
         </div>
     </section>
+
+    <button id="modalTrigger" style="display: none;"></button>
+
+    <div class="modal" id="modal">
+        <div class="modal-header">
+            <h2>View ticket</h2>
+            <button id="modalHeaderClose" class="btn-link btn-close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-content">
+            <div class="category">
+                <div class="panel-grp">
+                    <div class="panel">
+                        <div class="panel-item">
+                            <div class="data">
+                                <ul>
+                                    <li>Ticket ID: <span>000</span></li>
+                                    <li>Issued by <span>username</span></li>
+                                    <li>Status: <span> open</span></li>
+                                    <li>Priority: <span>0</span> (level)</li>
+                                    <li>Assigned to: <span>admin</span></li>
+                                    <li>Submitted on: <span>01-01-2021 00:00:00</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="panel-item">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos hic dolores, reiciendis quam blanditiis quasi
+                                quo assumenda distinctio qui cum provident similique labore iure eum explicabo, magni, repudiandae suscipit?
+                                Expedita dolor, culpa beatae nobis ad quis odio nihil inventore a, earum quisquam dignissimos suscipit eius.
+                                Necessitatibus fugit qui a nobis ipsam error molestias autem eum reprehenderit nemo pariatur voluptatem, maiores
+                                eaque alias mollitia. Eveniet quaerat et corrupti inventore accusamus optio sequi neque repellendus? Facere
+                                perferendis dolor quaerat fugit ipsam cupiditate. Nobis ipsum impedit modi ut quasi. Eveniet eum enim dolores id
+                                excepturi. Culpa numquam porro aliquid in. Quasi, reiciendis. Neque.
+                            </p>
+                        </div>
+                        <div class="container-btn-dropdown multi">
+                            <div class="btn-dropdown-grp">
+                                <button class="btn-dropdown" id="btnDropGrp1">Actions <i class="fas fa-chevron-down"></i></button>
+                                <div class="btn-dropdown-items" id="listDropGrp1">
+                                    <div class="item">Release ticket</div>
+                                    <div class="item">Close as 'resolved'</div>
+                                    <div class="item">Close ticket</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="modalFooterClose" class="btn btn-link">Close</button>
+        </div>
+    </div>
     
+    <script>
+        const tickets = document.querySelectorAll("tr.data");
+        for(let i=0;i<tickets.length;i++){
+            tickets[i].onclick = function(){
+                document.querySelector("#modalTrigger").click();
+            }
+        }
+        
+        document.querySelector("#modalTrigger").onclick = function(){
+            console.log('click event');
+        }
+    </script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
