Added extra buttons to modal in '/admin/view-tickets.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-tickets.html
+++ b/BeginnersPad v2/admin/view-tickets.html
@@ -271,6 +271,9 @@
             </div>
         </div>
         <div class="modal-footer">
+            <a class="btn btn-link" href="/admin/manage-user.html">View user</a>
+            <a class="btn btn-link" href="#">View user's ticket</a>
+            <a class="btn btn-link" href="/admin/view-ticket.html">Go to ticket</a>
             <button id="modalFooterClose" class="btn btn-link">Close</button>
         </div>
     </div>
