--- a/BeginnersPad v2/admin/manage-help-categories.html
+++ b/BeginnersPad v2/admin/manage-help-categories.html
@@ -263,6 +263,7 @@
     
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/search-bar-scroll.js"></script>
+    <script src="/js/form-validator-manage-help-categories.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
 </html>
