--- a/BeginnersPad v2/admin/manage-faqs.html
+++ b/BeginnersPad v2/admin/manage-faqs.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="fab-container">
-        <button class="fab btn-primary"><i class="fas fa-plus"></i> Add FAQ</button>
+        <button id="modalTrigger" class="fab btn-primary"><i class="fas fa-plus"></i> Add FAQ</button>
     </div>
 
     <h3 class="section-title">Manage FAQs</h3>
@@ -189,9 +189,45 @@
             </div>
         </div>
     </section>
+
+    <div class="modal" id="modal">
+        <div class="modal-header">
+            <h2>Add FAQ</h2>
+            <button id="modalHeaderClose" class="btn-link btn-close"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-content">
+            <div class="category">
+                <form id="formAddFaq">
+                    <div class="form-group" id="grpTitle">
+                        <label for="title">FAQ title*</label>
+                        <input type="text" name="title" id="title">
+                    </div>
+                    <div class="form-group" id="grpDescription">
+                        <label for="description">Description*</label>
+                        <textarea name="description" id="description" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="form-group" id="grpCategory">
+                        <label for="category">Category*</label>
+                        <select name="category" id="category">
+                            <option value="" selected>--select category--</option>
+                            <option value="1">category 1</option>
+                            <option value="2">category 2</option>
+                            <option value="3">category 3</option>
+                            <option value="4">category 4</option>
+                            <option value="5">category 5</option>
+                            <option value="5">uncategorised</option>
+                        </select>
+                    </div>
+                    <input class="btn btn-submit" type="button" value="Create" onclick="init();">
+                </form>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="modalFooterClose" class="btn btn-link">Close</button>
+        </div>
+    </div>
     
     <script src="/js/nav-drawer.js"></script>
-    <script src="/js/search-bar-scroll.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
 </html>
