Added '/js/form-validator-manage-faqs.js' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-faqs.html
+++ b/BeginnersPad v2/admin/manage-faqs.html
@@ -228,6 +228,7 @@
     </div>
     
     <script src="/js/nav-drawer.js"></script>
+    <script src="/js/form-validator-manage-faqs.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
 </html>
