Added '/js/form-validator-manage-account.js' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/manage-account.html
+++ b/BeginnersPad v2/manage-account.html
@@ -265,7 +265,7 @@
         </div>
     </div>
 
-    <script src="/js/form-validator.js"></script>
+    <script src="/js/form-validator-manage-account.js"></script>
     <script src="js/css-base.js"></script>
 </body>
 </html>
