Added logic to '/js/form-validator-manage-account.js' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/manage-account.html
+++ b/BeginnersPad v2/manage-account.html
@@ -238,7 +238,7 @@
                         <label for="username">Username (must be unique)</label>
                         <input type="text" name="username" id="username">
                     </div>
-                    <input class="btn btn-submit" type="button" value="Update" onclick="init();">
+                    <input class="btn btn-submit" type="button" value="Update" onclick="initAccount();">
                 </form>
             </div>
             <div class="category">
@@ -256,7 +256,7 @@
                         <label for="password_confirmation">Confirm new password</label>
                         <input type="password" name="password_confirmation" id="password_confirmation">
                     </div>
-                    <input class="btn btn-submit" type="button" value="Update password" onclick="init();">
+                    <input class="btn btn-submit" type="button" value="Update password" onclick="initPassword();">
                 </form>
             </div>
         </div>
