Added '.secondary-nav' to '/view-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listing.html
+++ b/BeginnersPad v2/admin/manage-listing.html
@@ -348,7 +348,7 @@
                             <button>Delete</button>
                         </div>
                     </div>
-                    <div class="listing-actions" id="listing-actions">
+                    <div class="listing-actions">
                         <h3>Other actions</h3>
                         <div class="btn-grp vertical">
                             <button>Tour requests</button>
