--- a/BeginnersPad v2/view-listing.html
+++ b/BeginnersPad v2/view-listing.html
@@ -33,7 +33,7 @@
     </nav>
 
     <!-- Showcase -->
-    <section class="showcase-listing">
+    <section class="showcase-listing" id="section-showcase">
         <div class="showcase-listing-img-group">
             <div class="showcase-listing-img-1"></div>
             <div class="showcase-listing-img-2"></div>
@@ -49,6 +49,19 @@
             <span>View images</span>
         </div>
     </section>
+
+    <!-- Nav -->
+    <div class="secondary-nav">
+        <ul>
+            <li><a href="#section-showcase">Basic</a></li>
+            <li><a href="#units-available">Units</a></li>
+            <li><a href="#lister-details">Lister</a></li>
+            <li><a href="#listing-features">Features</a></li>
+            <li><a href="#map-view">Map</a></li>
+            <li><a href="#nearby-places">Places</a></li>
+            <li><a href="#listing-reviews">Reviews</a></li>
+        </ul>
+    </div>
 
     <section class="section-listing-primary">
         <div class="container">
@@ -104,7 +117,7 @@
         <div class="container">        
             <div class="panel-grp">
                 <div class="panel">
-                    <div class="listing-units-list">
+                    <div class="listing-units-list" id="units-available">
                         <h3>Units available</h3>
                         <div class="listing-units-grp">
                             <div class="card-sm card-unit">
@@ -223,7 +236,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="lister-details">
+                    <div class="lister-details" id="lister-details">
                         <h3>Lister information</h3>
                         <div class="details">
                             <div class="header">
@@ -251,7 +264,7 @@
                     </div>
                 </div>
                 <div class="panel">
-                    <div class="listing-features">
+                    <div class="listing-features" id="listing-features">
                         <h3>Communial features</h3>
                         <div class="features">
                             <ul>
@@ -266,7 +279,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="listing-map">
+                    <div class="listing-map" id="map-view">
                         <h3>Location</h3>
                         <div id="map"></div>
                     </div>
@@ -293,7 +306,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="listing-nearby-places">
+                    <div class="listing-nearby-places" id="nearby-places">
                         <h3>Nearby markets</h3>
                         <div class="places-list">
                             <div class="place" id="mkt1">
@@ -339,7 +352,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="listing-reviews">
+                    <div class="listing-reviews" id="listing-reviews">
                         <h3>Reviews</h3>
                         <div class="reviews-list">
                             <div class="review-item">
