--- a/BeginnersPad v2/beginner/favourites.html
+++ b/BeginnersPad v2/beginner/favourites.html
@@ -50,7 +50,7 @@
             <p>Menu</p>
             <ul>
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
-                <li><a href="/view-listings.html">Listings</a></li>
+                <li><a href="/beginner/view-listings.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li class="selected"><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
