Added '.info-actions' to all view unit files in all directories in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listing-unit.html
+++ b/BeginnersPad v2/admin/manage-listing-unit.html
@@ -123,6 +123,12 @@
             </div>
             <!-- Info -->
             <div class="main-info">
+                <div class="info-name">
+                    <div class="info-actions">
+                        <i class="fas fa-share-alt"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                </div>
                 <h2>Unit title</h2>
                 <p class="price">KES 0.00</p>
                 <p class="deposit">Initial deposit: not required</p>
