--- a/BeginnersPad v2/beginner/view-listing-unit-pending.html
+++ b/BeginnersPad v2/beginner/view-listing-unit-pending.html
@@ -92,6 +92,12 @@
             </div>
             <!-- Info -->
             <div class="main-info">
+                <div class="info-name">
+                    <div class="info-actions">
+                        <i class="fas fa-share-alt"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                </div>
                 <h2>Unit title</h2>
                 <p class="price">KES 0.00</p>
                 <p class="deposit">Initial deposit: not required</p>
@@ -147,9 +153,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section-more">
+                    <!-- <div class="section-more">
                         <a href="/beginner/view-listing-unit-occupied.html">Preview occupied listing as occupant <i class="fas fa-chevron-right"></i></a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="panel">
                     <div class="listing-units-list">
@@ -229,7 +235,7 @@
                         <h3>Property</h3>
                         <div class="listing-units-grp">
                             <div class="card-sm card-2">
-                                <a href="/view-listing.html">
+                                <a href="/beginner/view-listing.html">
                                     <div class="thumb"></div>
                                     <div class="details">
                                         <h2>Listing name</h2>
