--- a/BeginnersPad v2/lister/manage-listing-unit.html
+++ b/BeginnersPad v2/lister/manage-listing-unit.html
@@ -125,6 +125,8 @@
                     <h2>Unit name</h2>
                     <div class="info-actions">
                         <i class="fas fa-edit"></i>
+                        <i class="fas fa-share-alt"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </div>
                 <p class="price">KES 0.00</p>
